# midgard-c-plus-plus

./: README
libmidgard2mm/: AUTHORS  Makefile.am  README  configure.ac  libmidgard2mm.doap
libmidgard2mm/codegen/: Makefile.am
libmidgard2mm/codegen/extradefs/: generate_extra_defs_libmidgard2.cc
libmidgard2mm/codegen/m4/: convert.m4  convert_libmidgard2.m4  filelist.am
libmidgard2mm/doc/: Makefile.am
libmidgard2mm/doc/reference/: Doxyfile.in
libmidgard2mm/examples/: Makefile.am
libmidgard2mm/examples/example/: example.cc
libmidgard2mm/libmidgard2/: libmidgard2mm-uninstalled.pc.in  libmidgard2mm.h  libmidgard2mm.pc.in  libmidgard2mmconfig.h.in
libmidgard2mm/libmidgard2/libmidgard2mm/: Makefile.am  filelist.am  libmidgard2.cc  libmidgard2.h  wrap_init.h
libmidgard2mm/libmidgard2/libmidgard2mm/private/: libmidgard2_p.h
libmidgard2mm/libmidgard2/src/: Makefile.am  filelist.am  libmidgard2.cc  libmidgard2.ccg  libmidgard2.defs  libmidgard2.h  libmidgard2.hg  libmidgard2_method.defs
